igt@i915_selftest@live@gt_pm - incomplete - GEM_BUG_ON(!assert_pending_valid(execlists, "promote"))
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8399/fi-skl-6700k2/igt@i915_selftest@live@gt_pm.html
<0> [340.652524] i915_sel-5260 7..s. 333079180us : assert_pending_valid: vcs0: Nothing pending for promotion!
<0> [340.652565] i915_sel-5260 7..s. 333079195us : process_csb: process_csb:2625 GEM_BUG_ON(!assert_pending_valid(execlists, "promote"))
<0> [340.652568] ---------------------------------
<4> [340.652607] ------------[ cut here ]------------
<2> [340.652609] kernel BUG at drivers/gpu/drm/i915/gt/intel_lrc.c:2625!
<4> [340.652614] invalid opcode: 0000 [#1] PREEMPT SMP PTI
<4> [340.652617] CPU: 7 PID: 5260 Comm: i915_selftest Tainted: G U W 5.7.0-rc3-CI-CI_DRM_8399+ #1
<4> [340.652619] Hardware name: System manufacturer System Product Name/Z170 PRO GAMING, BIOS 0802 09/02/2015
<4> [340.652654] RIP: 0010:process_csb+0x6bf/0x830 [i915]
<4> [340.652658] Code: 00 48 c7 c2 e0 cb 37 a0 48 c7 c7 74 c4 1f a0 e8 c7 bf fa e0 bf 01 00 00 00 e8 dd 91 fa e0 31 f6 bf 09 00 00 00 e8 41 6c eb e0 <0f> 0b 8b 87 98 05 00 00 85 c0 0f 85 5f f9 ff ff 48 c7 c1 90 b3 3a
<4> [340.652660] RSP: 0018:ffffc9000021cea0 EFLAGS: 00010297
<4> [340.652663] RAX: 0000000080000100 RBX: 0000000000000000 RCX: 0000000000000000
<4> [340.652666] RDX: ffff8881fa4ea940 RSI: 0000000000000000 RDI: 0000000000000009
<4> [340.652668] RBP: ffffc9000021cf00 R08: 0000000000000000 R09: 0000000000000000
<4> [340.652670] R10: 0000000000000000 R11: 0000000000000000 R12: ffff88824154a018
<4> [340.652672] R13: ffff88824154a6f8 R14: ffff88824154a6e0 R15: ffff88824154a000
<4> [340.652675] FS: 00007f01455f6e40(0000) GS:ffff88824df80000(0000) knlGS:0000000000000000
<4> [340.652678] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [340.652680] CR2: 0000561f42f73298 CR3: 0000000205e18003 CR4: 00000000003606e0
<4> [340.652683] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4> [340.652685] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
<4> [340.652687] Call Trace:
<4> [340.652691] <IRQ>
<4> [340.652724] ? execlists_submission_tasklet+0xcf/0x140 [i915]
<4> [340.652759] execlists_submission_tasklet+0x2f/0x140 [i915]
<4> [340.652765] tasklet_action_common.isra.16+0x6c/0x1c0
<4> [340.652769] __do_softirq+0xdf/0x49e
<4> [340.652773] irq_exit+0xba/0xc0
<4> [340.652776] smp_apic_timer_interrupt+0xb7/0x280
<4> [340.652778] apic_timer_interrupt+0xf/0x20
<4> [340.652781] </IRQ>
<4> [340.652815] RIP: 0010:execlists_sanitize+0x33/0x60 [i915]
<4> [340.652818] Code: 89 fb 48 b8 5a 5a 5a 5a 5a 5a 5a 5a 48 8d 79 08 48 89 01 48 89 81 f8 0f 00 00 48 83 e7 f8 48 29 f9 81 c1 00 10 00 00 c1 e9 03 <f3> 48 ab 48 89 df e8 f2 f7 ff ff 48 8b 83 e0 00 00 00 48 8b 78 58
<4> [340.652820] RSP: 0018:ffffc900005bf990 EFLAGS: 00010206 ORIG_RAX: ffffffffffffff13
<4> [340.652823] RAX: 5a5a5a5a5a5a5a5a RBX: ffff88824154a000 RCX: 00000000000000a7
<4> [340.652826] RDX: 0000000000000040 RSI: 0000000000001000 RDI: ffff88824a7f4ac8
<4> [340.652828] RBP: ffff8882091eceb8 R08: ffff8881fa4eb200 R09: 0000000000000000
<4> [340.652831] R10: 0000000000000000 R11: 0000000000000000 R12: ffff8882091ebf38
<4> [340.652833] R13: 0000000000000001 R14: ffff8882091ebf38 R15: ffff8882091ecec8
<4> [340.652868] gt_sanitize+0xd6/0x250 [i915]
<4> [340.652903] intel_gt_resume.part.8+0x45/0x3a0 [i915]
<4> [340.652937] live_gt_resume+0x5b/0xf0 [i915]
<4> [340.652984] __i915_subtests+0xb8/0x210 [i915]
<4> [340.653029] ? __i915_live_teardown+0x50/0x50 [i915]
<4> [340.653074] ? __intel_gt_live_setup+0x30/0x30 [i915]
<4> [340.653118] __run_selftests+0x112/0x170 [i915]
<4> [340.653161] i915_live_selftests+0x2c/0x60 [i915]
<4> [340.653194] i915_pci_probe+0x14a/0x1d0 [i915]
<4> [340.653198] ? _raw_spin_unlock_irqrestore+0x34/0x60
<4> [340.653202] pci_device_probe+0x9e/0x120
<4> [340.653206] really_probe+0xea/0x430
<4> [340.653209] driver_probe_device+0x10b/0x120
<4> [340.653211] device_driver_attach+0x4a/0x50
<4> [340.653214] __driver_attach+0x97/0x130
<4> [340.653216] ? device_driver_attach+0x50/0x50
<4> [340.653217] bus_for_each_dev+0x74/0xc0
<4> [340.653220] bus_add_driver+0x142/0x220
<4> [340.653223] driver_register+0x56/0xf0
<4> [340.653253] i915_init+0x6c/0x7c [i915]
<4> [340.653257] ? 0xffffffffa056f000
<4> [340.653260] do_one_initcall+0x58/0x300
<4> [340.653263] ? do_init_module+0x1d/0x1f2
<4> [340.653267] ? rcu_read_lock_sched_held+0x4d/0x80
<4> [340.653271] ? kmem_cache_alloc_trace+0x2a6/0x2d0
<4> [340.653274] do_init_module+0x56/0x1f2
<4> [340.653278] load_module+0x2339/0x2a20
<4> [340.653285] ? __do_sys_finit_module+0xe9/0x110
<4> [340.653287] __do_sys_finit_module+0xe9/0x110
<4> [340.653293] do_syscall_64+0x4f/0x220
<4> [340.653296] entry_SYSCALL_64_after_hwframe+0x49/0xb3
<4> [340.653298] RIP: 0033:0x7f0144ca2839
<4> [340.653301] Code: 00 f3 c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 1f f6 2c 00 f7 d8 64 89 01 48
<4> [340.653303] RSP: 002b:00007ffc56650f48 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
<4> [340.653304] RAX: ffffffffffffffda RBX: 0000557a52f3ecb0 RCX: 00007f0144ca2839
<4> [340.653305] RDX: 0000000000000000 RSI: 0000557a52f46500 RDI: 0000000000000006
<4> [340.653306] RBP: 0000557a52f46500 R08: 0000000000000004 R09: 0000557a52f3c150
<4> [340.653307] R10: 00007ffc56651090 R11: 0000000000000246 R12: 0000000000000000
<4> [340.653309] R13: 0000557a52f367a0 R14: 0000000000000020 R15: 0000000000000044
<4> [340.653312] Modules linked in: i915(+) vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic x86_pkg_temp_thermal mei_hdcp coretemp crct10dif_pclmul crc32_pclmul snd_intel_dspcfg snd_hda_codec snd_hwdep ghash_clmulni_intel snd_hda_core e1000e snd_pcm ptp pps_core mei_me mei prime_numbers [last unloaded: i915]
<4> [340.653325] ---[ end trace 79c9eac24a69bc09 ]---
Below change doesn't help?
drm/i915/gt: Sanitize GT first
Edited by LAKSHMINARAYANA VUDUM